[package]
name = "horizon-template-runtime"
version = "0.0.0"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/NoirHQ/horizon/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# Substrate
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

# Substrate FRAME
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-assets = { workspace = true }
pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-sudo = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-timestamp = { workspace = true }

# Frontier
fp-self-contained = { workspace = true, features = ["serde"] }

# Horizon
hp-account = { workspace = true }
hp-cosmos = { workspace = true }
hp-crypto = { workspace = true }
hp-io = { workspace = true }
hp-rpc = { workspace = true }
pallet-cosmos = { workspace = true }
pallet-cosmos-accounts = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "frame-executive/std",
  "frame-support/std",
  "frame-system/std",
  "frame-system-rpc-runtime-api/std",
  "pallet-assets/std",
  "pallet-aura/std",
  "pallet-balances/std",
  "pallet-grandpa/std",
  "pallet-sudo/std",
  "pallet-transaction-payment/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-timestamp/std",
  "fp-self-contained/std",
  "hp-account/std",
  "hp-cosmos/std",
  "hp-crypto/std",
  "hp-io/std",
  "hp-rpc/std",
  "pallet-cosmos/std",
  "pallet-cosmos-accounts/std",
  "substrate-wasm-builder",
]
