[package]
name = "pallet-cosmos-modules"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/horizon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate
frame-support = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Horizon
hp-cosmos = { workspace = true, features = ["with-codec"] }

[features]
default = ["std"]
std = ["frame-support/std", "sp-runtime/std", "sp-std/std", "hp-cosmos/std"]
